# TTFailurePredict

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: DESIGN.md  README.md
feature_specs/: README.md  apm_application.yaml  aws_lambda.yaml  k8s_pod.yaml
scripts/: bootstrap.sh
sql/: README.md  schema.sql
src/survpredict/: __init__.py  cli.py  config.py
src/survpredict/common/: README.md  __init__.py  db.py  logging.py  time.py
src/survpredict/features/: README.md  __init__.py  aggregator.py  offline_store.py  online_store.py  spec.py  transformations.py
src/survpredict/feedback/: README.md  __init__.py  proposer.py  reconcile.py  retrain.py  structurer.py
src/survpredict/inference/: README.md  __init__.py  explain.py  propagation.py  scorer.py  service.py  warm_sweep.py
src/survpredict/ingestion/: README.md  __init__.py  entity_graph.py  events.py  newrelic_client.py  nrql_puller.py  postmortem.py
src/survpredict/labels/: README.md  __init__.py  survival.py
src/survpredict/publish/: README.md  __init__.py  newrelic_events.py
src/survpredict/training/: README.md  __init__.py  cox.py  evaluate.py  pipeline.py  registry.py  rsf.py
src/survpredict/ui/: README.md  __init__.py  dashboard.py
tests/: test_spec_loader.py  test_transformations.py
