[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survpredict"
version = "0.1.0"
description = "Survival analysis for predictive observability on New Relic telemetry"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Darren" }]
license = { text = "Proprietary" }

dependencies = [
    # Survival models
    "scikit-survival>=0.22",
    "lifelines>=0.28",
    "xgboost>=2.0",

    # ML infra
    "scikit-learn>=1.3",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "shap>=0.44",
    "mlflow>=2.10",

    # Storage
    "psycopg[binary,pool]>=3.1",
    "redis>=5.0",
    "sqlalchemy>=2.0",

    # Service
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # Orchestration / utilities
    "prefect>=2.14",
    "httpx>=0.26",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "typer>=0.9",

    # LLM
    "anthropic>=0.25",

    # UI
    "streamlit>=1.31",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "hypothesis>=6.98",
]

[project.scripts]
survpredict = "survpredict.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
